--- a/www/templates/tabs/home.html
+++ b/www/templates/tabs/home.html
@@ -10,7 +10,7 @@
 
     <div class="card homecard">
       <div class="item item-divider homecarddiv">
-        Thoughts Of The Day...
+        Thoughts of the day...
       </div>
       <div class="item item-text-wrap homecardwrap">
         Drink Water Live Long.
