--- a/www/templates/tabs/lastmeet.html
+++ b/www/templates/tabs/lastmeet.html
@@ -3,7 +3,7 @@
               <!-- List of Invitations -->
     <ion-list>
       <div class="item item-divider">
-        A Last Meet with <i class="icon ion-android-people"></i> besties,
+        Last Meet with <i class="icon ion-android-people"></i> besties,
       </div>
     </ion-list>
 
