--- a/www/templates/viewbesties.html
+++ b/www/templates/viewbesties.html
@@ -17,7 +17,7 @@
       <div class="col col-25 mediabanner" ng-click="bestiescall()"><img src="img/phone.png" width="50" height="50"><br>Call</div>
       <div class="col col-25 mediabanner" ng-click="bestiessms()"><img src="img/sms.png" width="50" height="50"><br>SMS</div>
       <div class="col col-25 mediabanner"><a class="viewbestieschatanchor" ng-href="#/app/chat/{{id}}/{{contact}}"><img src="img/chat.png" width="50" height="50"><br>Chat</a></div>
-      <div class="col col-25 mediabanner" ng-click="bestieswhatsapp()"><img src="img/whatsapp.png" width="50" height="50"><br>Whatsapp</div>
+      <div class="col col-25 mediabanner" ng-click="bestieswhatsapp(contact)"><img src="img/whatsapp.png" width="50" height="50"><br>Whatsapp</div>
     </div>
 
     <div class="list viewbestiesdiv">
