--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,7 +2,7 @@
   	<ion-content class="contentProfile">
   		<div class="row">
 	        <div class="col colviewbestiesimage Profileimage">
-	            <img src="{{pic}}" class=" animated fadeIn" width="100" height="100" ng-model="my.image" ng-click="chooseOptionToChangePic()">
+	            <img src="{{pic}}" class=" animated fadeIn profilepagepic" width="100" height="100" ng-model="my.image" ng-click="chooseOptionToChangePic()">
 	        </div>
 	        <div class="col colviewbestiesname">
 	        	<h2 style="color: white"><b>{{name}}</b></h2>
@@ -66,7 +66,7 @@
 		</ion-tabs>
  -->
     </ion-content>
-    <ion-footer-bar class="bar bar-positive">
-		<button class="button button-clear pull-right" style="width: 100%" ng-click="findmore()">Find Your Besties</button>
-	</ion-footer-bar>
+    <!-- <ion-footer-bar class="bar bar-positive profilepagefooter">
+		<button class="button button-clear pull-right profilepagebutton" style="width: 100%" ng-click="findmore()">Find Your Besties</button>
+	</ion-footer-bar> -->
 </ion-view>
