--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -25,7 +25,8 @@
   <ion-side-menu side="left" style="background-color: transparent; "><!-- background-color:#222446 -->
     <ion-content>
       <div class="img-circular">
-          <img src="{{profilePic}}" on-error-src="person.png" width="160" height="160" class="profileLogo">
+          <!--  on-error-src="img/person.png"  -->
+          <img src="{{profilePic}}" width="160" height="160" class="profileLogo">
       </div>
       <p style="margin-left: 20%;font-size: 18px;margin-top: 12px;color: #ffffcc"><b>{{username}}</b></p>
       <ul class="list"><!-- constColor -->
