--- a/www/templates/tabs/invitation.html
+++ b/www/templates/tabs/invitation.html
@@ -2,7 +2,7 @@
 <ion-content class="contentProfile" ng-init="findInvitationinit()">
 	<ion-list>
       <div class="item item-divider">
-        A <i class="icon ion-android-people"></i> friend(s) invited you,
+        <i class="icon ion-android-people"></i>  Invitation by friend(s),
       </div>
     </ion-list>
 
