--- a/www/templates/abstractpages/contactlist.html
+++ b/www/templates/abstractpages/contactlist.html
@@ -3,7 +3,7 @@
 	  <div class="buttons">
 	  	<button class="button icon ion-loop" ng-click="calltoupdate()"></button>
 	  </div>
-	  <h1 class="title">Friends In PhoneBook</h1>
+	  <h1 class="title">Contacts In PhoneBook</h1>
 	  <div class="buttons">
 	    <button class="button icon ion-close-circled" ng-click="closeModal()"></button>
 	  </div>
