--- a/www/templates/viewinmap.html
+++ b/www/templates/viewinmap.html
@@ -2,7 +2,7 @@
   	<ion-content>
     	<div id="map"></div>
     </ion-content>
-    <ion-footer-bar class="bar-dark">
+  <ion-footer-bar class="bar-dark  mapfooter">
       <a class="button button-icon icon ion-navigate" style="font-size: 10px">{{useraddress}}</a><!--  href="javascript:location.reload()"  -->
     </ion-footer-bar>
 </ion-view>
