--- a/www/css/style.css
+++ b/www/css/style.css
@@ -540,6 +540,11 @@ color: #fff;
   background-color: #323569;
 }
 
+/*map footer*/
+ion-footer-bar.bar-dark.mapfooter.bar.bar-footer {
+    background-image: linear-gradient(180deg, #111, #111 100%, transparent 50%);
+}
+
 /*home html */
 .item.item-divider.homecarddiv {
     color: #fff;
