--- a/www/templates/abstractpages/contactlist.html
+++ b/www/templates/abstractpages/contactlist.html
@@ -24,7 +24,7 @@
 
                      <div class="row">
                        <div class="col">
-                       <img src="img/ionic.png" width="45" height="45">
+                       <img src="img/person.png" width="45" height="45">
                      </div>
                       <div class="col col-75" style="left:0">
                        <h2>{{ contact.uname }}</h2>
