--- a/www/templates/viewbesties.html
+++ b/www/templates/viewbesties.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
       <div class="col viewbestiesnamedivadd">
-        <span class="icon ion-location"></span> {{meetdate}} at {{meetaddress?meetaddress:' not meet yet'}}
+        <span class="icon ion-location"></span> {{meetdate}} at {{meetaddress?meetaddress:' not yet meet'}}
       </div>
     </div><br><br>
     <!-- <div class="card">
